# popcorn-box

./: .gitignore  README.md  build_bundle.sh  cache_hits.txt  fix_db.py  install.sh  io.github.fastrizwaan.PopcornBox.json  meson.build  mpv  scratch_check.py  scratch_test.py  scratch_test2.py
data/: io.github.fastrizwaan.PopcornBox.desktop  meson.build
scripts/: bundle-binaries.sh  merge_db.py  run.sh
src/: meson.build  popcorn-box.in  scratch_test.py  scratch_test_93289.py
src/popcorn_box/: api.py  database.py  libtorrent_stream.py  main.py  player.py  player_widget.py  window.py
