install_data('io.github.fastrizwaan.PopcornBox.desktop',
  install_dir: join_paths(get_option('datadir'), 'applications')
)

install_data('icon/io.github.fastrizwaan.PopcornBox',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'),
  rename: 'io.github.fastrizwaan.PopcornBox.svg'
)
